[project]
name = "access_med_utils"
authors = [
    { name = "ACCESS-NRI" },
]
description = "ACCESS MED Utilities"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "APACHE-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = ["argparse", "pyyaml", "dask", "xarray",  "netcdf4"]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ilamb-tree-generator = "access_med_utils.ilamb:tree_generator"
